# ai-voice-command

./: .gitignore  README.md  docker-compose.yml  mcp.json  tmp_list_users.py  tmpclaude-bcf2-cwd
backend/: README.md  __init__.py  agent.py  env_loader.py  main.py  pyproject.toml  requirements.txt
backend/db/: supabase_client.py
backend/db/migrations/: 001_create_projects.sql  002_create_learn_books.sql  003_create_roadmaps.sql
backend/graph/: workflow.py
backend/livekit-voice-agent/: pyproject.toml
backend/models/: schemas.py
backend/routers/: ai.py  learn_books.py  projects.py  roadmap.py
backend/services/: auth_service.py  codegen_service.py  debug_service.py  execution_service.py  explain_service.py  intent_service.py  learn_codegen_service.py  llm_service.py  planning_service.py  rag_service.py  summary_service.py
frontend/agent-starter-react/: .env.example  app-config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/agent-starter-react/app/: layout.tsx  page.tsx
frontend/agent-starter-react/app/dashboard/: page.tsx
frontend/agent-starter-react/app/login/: page.tsx
frontend/agent-starter-react/app/roadmap/: page.tsx
frontend/agent-starter-react/app/signup/: page.tsx
frontend/agent-starter-react/app/workspace/: page.tsx
frontend/agent-starter-react/hooks/: useDownloadZip.ts  useSupabaseSession.ts
frontend/agent-starter-react/lib/: supabase.ts  voiceforge-api.ts
roadmap-generator/backend/: main.py  requirements.txt
roadmap-generator/frontend/: index.html  package.json
roadmap-generator/frontend/src/: App.jsx  api.js
(+39 files in other folders)
